--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
         <section class="page_menu">
             <a href="index.html"><img class="arrow_menu" src="img/arrow_menu.png" alt="fleche haut"></a>
             <article class="menu">
-                <a class="img_one" href="#"><img src="img/img_one.jpg"><div class="bottom"><p>EXPOSITION</p></div></a>
+                <a class="img_one" href="exposition.html"><img src="img/img_one.jpg"><div class="bottom"><p>EXPOSITION</p></div></a>
                 <a class="img_two" href="#"><img src="img/img_one.jpg"><div class="bottom"><p>INTERVIEW</p></div></a>
             </article>
         </section>
