--- a/menu.html
+++ b/menu.html
@@ -11,12 +11,12 @@
     <a href="index.html"><img class="arrow_menu" src="img/arrow_menu.png" alt="fleche haut"></a>
     <article class="menu">
         <a class="img_one" href="exposition.html"><img src="img/img_one.jpg">
-            <div class="bottom"><p>EXPOSITION</p></div>
+            <div class="bottom">EXPOSITION</div>
         </a>
         <a class="img_two" href="#"><img src="img/img_one.jpg">
-            <div class="bottom"><p>INTERVIEW</p></div>
+            <div class="bottom">INTERVIEW</div>
         </a>
     </article>
 </section>
 </body>
-</html>
+</html> 
