--- a/exposition.html
+++ b/exposition.html
@@ -8,16 +8,16 @@
     </head>
     <body class="page_expo">
          <div class="background_slider">
-            <img class="back_img" src="img/Fond_1.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_2.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_3.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_4.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_5.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_6.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_5.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_4.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_3.jpg" width="500px" height="auto">
-            <img class="back_img" src="img/Fond_2.jpg" width="500px" height="auto">
+            <img class="back_img" src="img/fond_0.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_3.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_0.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_3.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
         </div>
         <div>
             <header class="nav">
@@ -27,7 +27,7 @@
             </header>
             <section class="expo">
                 <h1>La technologie au cœurs de l'éducation.</h1>
-                <p><img class="eb_logo" src="img/eb_logo.jpg" alt="Logo Experience Brussel" width="300px" height="auto" title="Experience.Brussel"><strong>Expérience.Brussel</strong> propose une approche plus ludique et créative pour découvrir ou redécouvrir Bruxelles. Projections, écrans, questionnaires interactifs, tous les moyens sont bons pour apprendre. Ici nous allons nous pencher sur la projection sur maquette : outil créatif et adaptatif comme support d’exposé.</p>
+                <p><img class="eb_logo" src="img/eb_logo.jpg" alt="Logo Experience Brussel" width="110px" height="auto" title="Experience.Brussel"><strong>Expérience.Brussel</strong> propose une approche plus ludique et créative pour découvrir ou redécouvrir Bruxelles. Projections, écrans, questionnaires interactifs, tous les moyens sont bons pour apprendre. Ici nous allons nous pencher sur la projection sur maquette : outil créatif et adaptatif comme support d’exposé.</p>
                 <div class="slider">
                     <div class="banniere">
                         <img class="slide" src="img/banniere_groupe.jpg" alt="Banniere groupes" width="864px" height="auto" title="Groupe">
@@ -38,11 +38,11 @@
                 <p>L’expo dispose d’une salle avec une dizaines de projecteurs, d’une vidéo et d’une maquette pour expliquer la naissance de Bruxelles. Ici, les grands moyens sont utilisés pour une simple présentation. On peut imaginer qu’avec un simple projecteur, une salle vide et de la créativité, on peut la même chose ou même aller plus loin et imaginer que les smartphones pourront projeter une image.</p>
                 <p><img class="img_projection" src="img/img_projection.jpg" alt="Images de projection" width="210px" height="auto" title="Projection">De plus en plus, Bruxelles réfléchit sur des moyens plus ludiques au service de  l’apprentissage mais la mise en place de ces solutions coûteuses est fastidieuse. Pour autant, est-ce que la technologie peut devenir un outil principal de partage et d'éducation ?<br /><strong>Oui.</strong> La technologie fait de plus en plus partie de notre vie et est en constante évolution. Comme je l’ai évoqué plus tôt, imaginons que nos smartphones puissent projeter une image, dans l'hypothèse où tout le monde en possède un. La notions de partage des informations changerait totalement l’horizon; en effet, au lieu de se retrouver aspiré par les écrans, on se retrouve autour de ceux-ci. Mais à l'heure actuelle, quels sont les moyens pour aller dans ce sens ?</p>
                 <p>Tout simplement diffuser un contenu sur un écran externe. Aujourd’hui, petit à petit les écoles, les gares et les centres commerciaux disposent d’écrans interactifs. Les seuls freins actuels sont: la technologie, le coût de la mise en place, la formation adéquate des personnes à l’entretien du contenu. C’est pour répondre à ces défis que je suis actuellement en formation en web développement.<br /><br />Bien sûr, cela n’est <em>"qu’une bride"</em> des moyens mis à notre disposition. Tous les moyens sont bons pour partager et faire découvrir. Alors qu'est-ce qu’on attend ?</p>
-                <video loop class="video" width="300px" height="auto" controls="controls"><source src="img/fin.mp4" type="video/mp4" />    
+                <video loop class="video" width="400PX" height="auto" controls="controls"><source src="img/fin.mp4" type="video/mp4"/>    
             </section>
             <div class="nav_bas_expo">
-                <a href="#"><img class="arrow_haut_expo" src="img/arrow_menu.png" alt="fleche bas" height="20px" width="auto"></a>
-                <a href="interview.html"><img class="arrow_expo" src="img/arrow.png" alt="fleche bas" height="20px" width="auto"></a>
+                <a href="#"><img class="arrow_haut_expo" src="img/arrow_menu.png" alt="fleche bas" height="30px" width="auto"></a>
+                <a href="interview.html"><img class="arrow_expo" src="img/arrow.png" alt="fleche bas" height="30px" width="auto"></a>
             </div>
         </div>
     </body>
