--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <article class="presentation">
         <p class="text"> Je serais incapable de suivre un maitre aveuglement. Je passerais trop de temps à ruminer le
             passé. Je cacherais la nature des gens. Je serais trop souvent incompris.</p>
-        <p class="by">by Adrien DE LAET</p>
+        <p class="by"><em>by</em>   A. De Laet</p>
         <a href="menu.html"><img class="arrow" src="img/arrow.png" alt="fleche bas"></a>
     </article>
 </section>
