--- a/menu.html
+++ b/menu.html
@@ -8,15 +8,13 @@
 </head>
 <body>
 <section class="page_menu">
-    <a href="index.html"><img class="arrow_menu" src="img/arrow_menu.png" alt="fleche haut"></a>
     <article class="menu">
-        <a class="img_one" href="exposition.html"><img src="img/img_one.jpg" height="900px" width="auto">
-            <div class="bottom">EXPOSITION</div>
+        <a class="img" href="exposition.html"><img src="img/exposition.png" height="750px" width="auto">
         </a>
-        <a class="img_two" href="interview.html"><img src="img/img_one.jpg" height="900px" width="auto">
-            <div class="bottom">INTERVIEW</div>
+        <div class="barre_horizontal"></div>
+        <a class="img" href="interview.html"><img src="img/interview.png" height="750px" width="auto">
         </a>
     </article>
 </section>
 </body>
-</html> 
+</html>
