ajout page_interview

--- a/exposition.html
+++ b/exposition.html
@@ -11,13 +11,14 @@
             <img class="back_img" src="img/fond_0.png" width="500px" height="auto">
             <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
             <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_3.png" width="500px" height="auto">
             <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_3.png" width="500px" height="auto">
             <img class="back_img" src="img/fond_0.png" width="500px" height="auto">
             <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
             <img class="back_img" src="img/fond_3.png" width="500px" height="auto">
             <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
             <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
+            <!--référence image du menu https://dribbble.com/philipv -->
         </div>
         <div>
             <header class="nav">
@@ -40,10 +41,10 @@
                 <p>Tout simplement diffuser un contenu sur un écran externe. Aujourd’hui, petit à petit les écoles, les gares et les centres commerciaux disposent d’écrans interactifs. Les seuls freins actuels sont: la technologie, le coût de la mise en place, la formation adéquate des personnes à l’entretien du contenu. C’est pour répondre à ces défis que je suis actuellement en formation en web développement.<br /><br />Bien sûr, cela n’est <em>"qu’une bride"</em> des moyens mis à notre disposition. Tous les moyens sont bons pour partager et faire découvrir. Alors qu'est-ce qu’on attend ?</p>
                 <video loop class="video" width="400PX" height="auto" controls="controls"><source src="img/fin.mp4" type="video/mp4"/>    
             </section>
-            <div class="nav_bas_expo">
+            <footer class="nav_bas_expo">
                 <a href="#"><img class="arrow_haut_expo" src="img/arrow_menu.png" alt="fleche bas" height="30px" width="auto"></a>
                 <a href="interview.html"><img class="arrow_expo" src="img/arrow.png" alt="fleche bas" height="30px" width="auto"></a>
-            </div>
+            </footer>
         </div>
     </body>
 </html>
