--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Accueil - Projet preformation</title>
-</head>
-<body class="page_index">
-<section class="index">
-    <article class="presentation">
-        <p class="text"> Je serais incapable de suivre un maitre aveuglement. Je passerais trop de temps à ruminer le
-            passé. Je cacherais la nature des gens. Je serais trop souvent incompris.</p>
-        <p class="by"><em>by</em>   A. De Laet</p>
-        <a href="menu.html"><img class="arrow" src="img/arrow.png" alt="fleche bas"></a>
-    </article>
-</section>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Accueil - Projet preformation</title>
+    </head>
+    <body class="page_index">
+        <section class="index">
+            <article class="presentation">
+                <p class="text"> Je serais incapable de suivre un maitre aveuglement. Je passerais trop de temps à ruminer le
+                    passé. Je cacherais la nature des gens. Je serais trop souvent incompris.</p>
+                <p class="by">Adrien De Laet</p>
+                <a href="menu.html"><img class="arrow" src="img/arrow.png" alt="fleche bas"></a>
+            </article>
+        </section>
+    </body>
 </html>
