--- a/menu.html
+++ b/menu.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Menu</title>
-</head>
-<body>
-<section class="page_menu">
-    <article class="menu">
-        <a class="img" href="exposition.html"><img src="img/exposition.png" height="750px" width="auto">
-        </a>
-        <div class="barre_horizontal"></div>
-        <a class="img" href="interview.html"><img src="img/interview.png" height="750px" width="auto">
-        </a>
-    </article>
-</section>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Menu</title>
+    </head>
+    <body>
+        <a class="retour" href="index.html"><img src="img/retour.png" height="50px" width="auto"></a>
+        <section class="page_menu">
+            <div>
+                <img class="img_menu" src="img/exposition.jpg" height="750px" width="auto">
+                <a class="bottom" href="exposition.html">EXPOSITION</a>
+            </div>
+            <div class="barre_horizontal"></div>
+            <div>
+                <img class="img_menu" src="img/interview.jpg" height="750px" width="auto">
+                <a class="bottom" href="interview.html">INTERVIEW<a>
+            </div>
+        </section>
+    </body>
 </html>
+<!--référence image du menu https://fr.freepik.com/slidesgo -->
