--- a/interview.html
+++ b/interview.html
@@ -1,19 +1,65 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Interview</title>
-</head>
-<body>
-    <header class="nav">
-        <a href="index.html">ACCUEIL</a>
-        <a class="active" href="interview.html">INTERVIEW</a>
-        <a href="exposition.html">EXPOSITION</a>   
-    </header>
-    <section>
-
-    </section>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Interview</title>
+    </head>
+    <body>
+        <header class="nav">
+            <a href="index.html">ACCUEIL</a>
+            <a class="active" href="interview.html">INTERVIEW</a>
+            <a href="exposition.html">EXPOSITION</a>   
+        </header>
+        <section>
+            <div class="page_interview">
+                <p class="introduction">Tout commence par l'énoncé de l’exercice. Faire une interview d’un(e) web développeur(se). Moi : comment faire ? Je connais personne .. Puis, “Google" est ton ami !”. Je m’empresse de taper “société web développeur” dans “Google” et contact par e-mail toutes les boîtes se trouvant à Bruxelles avec un titre bien accrocheur “J’ai besoin de vous !”. Le temps s’écoule, seulement deux boites me répondent parmi la vingtaine contactée, mais elles n’ont pas le temps. Et une boite me met dans ses spams, super ! C'était avec mon adresse personnelle que j’ai envoyé les e-mails. Bref .. En réfléchissant comment j’allais faire pour contacter directement un web développeur sans passer par la boite. Je me suis souvenu qu’il y avait un site de réseau social professionnel : LinkedIn ! Je refais le même processus que précédemment. Eurêka, ça marche. Plusieurs réponses négatives et positives. Pour ne pas perdre de temps, je leur propose rapidement de leur envoyer un e-mail avec les questions de l’interview pour qu’ils puissent prendre le temps d’y répondre. Le temps file encore, pas de réponse. J’avais laissé deux semaines de marge, j’attends. La date approche .. Entre temps, je demande à ma sœur si elle connaît quelqu’un : oui ! Je le contacte, il ne s’occupe que d’un seul site, mais ça fera l’affaire et c’est toujours intéressant. Je lui envoi l’interview et il me répond rapidement. Super ! Mais j’aimerais bien un peu plus .. La date butoir approche, je renvoie un e-mail aux personnes qui avait accepté l’interview précédemment et je reçois une réponse rapidement d’une personne qui est indépendante. Une autre personne me dit qu’elle n’a pas le temps et aurait préférée le faire par téléphone ou Skype. Intéressé par son profil, je m’arrange avec cette personne pour l’avoir au téléphone. L’interview eue lieu et se passa très bien de mon côté (un peu stressé quand même) et j’espère du sien aussi : j’ai oublié de demander .. J’ai mes trois interviews avec chacun un profil différent. Ouf !</p>
+                <div class="personne">
+                    <div class="contenu"><h1>Roxane 33 ans</h1></div>
+                    <div class="contenu"><h1>Jean Luc 54 ans</h1></div>
+                    <div class="contenu"><h1>Edouard 26 ans</h1></div>
+                </div>
+                <div class ="reponse">
+                    <p class="contenu">Web développeuse dans une agence de Pub “Shake” - Back-end / mise en ligne / serveur. Esprit start-up 10-15 personnes. Toute l'équipe au même niveau et 3 managers.</p>
+                    <p class="contenu">UX/UI Designer et web développeur freelance - Suivi de la clientèle en full-stack. Indépendant “solo”.</p>
+                    <p class="contenu">Technicien vidéo chez “Studio l'Equipe”, étudiant en informatique le soir et suivit d’un site web pour l’INRACI (Helb Ilya-Prigogine).</p>
+                </div>
+                <h2 class="question">A quoi ressemble vos journées</h2>
+                <div class="reponse">
+                    <p class="contenu">Aucune journée se ressemble, planning organisé le lundi rythmé par les e-mails urgents et les gros projets. Ce qui me plait le plus c’est d’analyser des problèmes et d’échanger pour trouver des solutions.</p class="contenu">
+                    <p class="contenu">Je travaille avec une vue sur le jardin, ce qui embellit ma journée. Mise en place des idées et de leurs réalisations. Ce qui me plaît le plus c’est de créer des projets. Et de se tenir informer sur l'évolution des technologies.</p>
+                    <p class="contenu">J’analyse les besoins à développer avec les enseignants et je fais la mise à jour du site avec les connaissances apprise petit à petit.</p>
+                </div>
+                <h2 class="question">Quel est votre parcours ?</h2>
+                <div class="reponse">
+                    <p class="contenu">Petits boulots alimentaires après dans l’horeca. J’ai eu envie de changement donc j’ai suivie une formation chez “Interface 3”. Engager dans la boîte où je fais mon stage chez “Publicis Digitas” ensuite débaucher par “Shake”. Et à côté de l’autoformation pour approfondir mes connaissances.</p>
+                    <P class="contenu">Etude en décoration/publicité, gérant d’une agence hippique. Passionné par l’informatique. Je me forme en PAO ensuite je commence à travailler en tant que graphiste et de fil en aiguille, je réalise plusieurs sites web et emailings. Je deviens indépendant en 2004.</P>
+                    <P class="contenu">Etude en cinéma à l’INRACI. Peu de temps après la fin de mes études, je suis engagé chez “Studio l’Equipe”.</P>
+                </div>
+                <h2 class="question">Quels sont vos conseils ?</h2>
+                <div class="reponse">
+                    <P class="contenu">L'indispensable : FAIRE DES PAUSES ! Prendre le temps de souffler et cibler son domaine d'expertise : back-end ou front-end.</P>
+                    <P class="contenu">Rester à jours sur les exigences des entreprises et apprendre l’anglais.</P>
+                    <P class="contenu">De pratiquer le plus souvent possibles et coder proprement selon les design patterns.</P>
+                </div>
+                <h2 class="question">Internet comme moyen éducatif ?</h2>
+                <div class="reponse">
+                    <P class="contenu">Ca l’est déjà et vas prendre de plus en plus d’ampleur. C’est un outils de facilité pour l'enseignant et un support pour dynamiser ses cours.</P>
+                    <P class="contenu">On ne peut plus ignorer cette méthode éducative, mais cela doit rester un complément à l’apprentissage.</P>
+                    <P class="contenu">Oui mais pas le principal. L’avantage c’est qu’on peut avoir une expérience personnalisée mais  les informations ne sont pas toujours vérifiées.</P>
+                </div>
+                <h2 class="question">Me prendriez-vous en stage ?</h2>
+                <div class="reponse">
+                    <P class="contenu">CPourquoi pas. Selon les projets et le planning.</P>
+                    <P class="contenu">Difficile, pas assez de travail pour satisfaire l’expérience.</P>
+                    <P class="contenu">Cela n’est pas de mon ressort.</P>
+                </div>
+            </div>
+        </section>
+        <footer class="nav_bas_expo">
+            <a href="#"><img class="arrow_haut_expo" src="img/arrow_menu.png" alt="fleche bas" height="30px" width="auto"></a>
+            <a href="interview.html"><img class="arrow_expo" src="img/arrow.png" alt="fleche bas" height="30px" width="auto"></a>
+        </footer>
+    </body>
 </html> 
