--- a/exposition.html
+++ b/exposition.html
@@ -8,16 +8,16 @@
     </head>
     <body class="page_expo">
          <div class="background_slider">
-            <img class="back_img" src="img/fond_0.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_3.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_0.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_3.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_2.png" width="500px" height="auto">
-            <img class="back_img" src="img/fond_1.png" width="500px" height="auto">
+            <img class="back_img" src="img/fond_0.png">
+            <img class="back_img" src="img/fond_2.png">
+            <img class="back_img" src="img/fond_1.png">
+            <img class="back_img" src="img/fond_2.png">
+            <img class="back_img" src="img/fond_3.png">
+            <img class="back_img" src="img/fond_0.png">
+            <img class="back_img" src="img/fond_1.png">
+            <img class="back_img" src="img/fond_3.png">
+            <img class="back_img" src="img/fond_2.png">
+            <img class="back_img" src="img/fond_1.png">
             <!--référence image du menu https://dribbble.com/philipv -->
         </div>
         <div>
