--- a/menu.html
+++ b/menu.html
@@ -9,15 +9,15 @@
     <body>
         <a class="retour" href="index.html"><img src="img/retour.png" height="50px" width="auto"></a>
         <section class="page_menu">
-            <div>
-                <img class="img_menu" src="img/exposition.jpg" height="750px" width="auto">
-                <a class="bottom" href="exposition.html">EXPOSITION</a>
-            </div>
+            <a class="lien_menu" href="exposition.html">
+                <img class="img_menu" src="img/exposition.jpg" height="650px" width="auto">
+                <div class="bottom">EXPOSITION</div>
+            </a>
             <div class="barre_horizontal"></div>
-            <div>
-                <img class="img_menu" src="img/interview.jpg" height="750px" width="auto">
-                <a class="bottom" href="interview.html">INTERVIEW<a>
-            </div>
+            <a class="lien_menu" href="interview.html">
+                <img class="img_menu" src="img/interview.jpg" height="650px" width="auto">
+                <div class="bottom">INTERVIEW</div>
+            </a>
         </section>
     </body>
 </html>
