--- a/interview.html
+++ b/interview.html
@@ -7,19 +7,28 @@
         <title>Interview</title>
     </head>
     <body class="page_interview">
-        <header class="nav">
-            <div class="deroulant"><a href="index.html">ACCUEIL</a>
-                <div class="sous">
-                    <a href="menu.html">MENU</a>
-                    <a href="#">CONTACT</a>
-                </div>
-            </div>
-            <a class="active" href="interview.html">INTERVIEW</a>
-            <a href="exposition.html">EXPOSITION</a>   
+        <header>
+            <nav class="barre_menu">
+                <ul class="menu">
+                    <li class="deroulant"><a href="index.html">ACCUEIL</a>
+                        <ul class="sous">
+                            <li><a href="menu.html">MENU</a></li>
+                            <li><a href="#">CONTACT</a></li>
+                        </ul>
+                    </li>
+                    <li><a class="active" href="interview.html">INTERVIEW</a></li>
+                    <li><a href="exposition.html">EXPOSITION</a></li>
+                </ul>
+            </nav>
         </header>
         <section>
             <div class="interview">
                 <p class="introduction">Tout commence par l'énoncé de l’exercice. Faire une interview d’un(e) web développeur(se). Moi : comment faire ? Je connais personne .. Puis, “Google" est ton ami !”. Je m’empresse de taper “société web développeur” dans “Google” et contact par e-mail toutes les boîtes se trouvant à Bruxelles avec un titre bien accrocheur “J’ai besoin de vous !”. Le temps s’écoule, seulement deux boites me répondent parmi la vingtaine contactée, mais elles n’ont pas le temps. Et une boite me met dans ses spams, super ! C'était avec mon adresse personnelle que j’ai envoyé les e-mails. Bref .. En réfléchissant comment j’allais faire pour contacter directement un web développeur sans passer par la boite. Je me suis souvenu qu’il y avait un site de réseau social professionnel : LinkedIn ! Je refais le même processus que précédemment. Eurêka, ça marche. Plusieurs réponses négatives et positives. Pour ne pas perdre de temps, je leur propose rapidement de leur envoyer un e-mail avec les questions de l’interview pour qu’ils puissent prendre le temps d’y répondre. Le temps file encore, pas de réponse. J’avais laissé deux semaines de marge, j’attends. La date approche .. Entre temps, je demande à ma sœur si elle connaît quelqu’un : oui ! Je le contacte, il ne s’occupe que d’un seul site, mais ça fera l’affaire et c’est toujours intéressant. Je lui envoi l’interview et il me répond rapidement. Super ! Mais j’aimerais bien un peu plus .. La date butoir approche, je renvoie un e-mail aux personnes qui avait accepté l’interview précédemment et je reçois une réponse rapidement d’une personne qui est indépendante. Une autre personne me dit qu’elle n’a pas le temps et aurait préférée le faire par téléphone ou Skype. Intéressé par son profil, je m’arrange avec cette personne pour l’avoir au téléphone. L’interview eue lieu et se passa très bien de mon côté (un peu stressé quand même) et j’espère du sien aussi : j’ai oublié de demander .. J’ai mes trois interviews avec chacun un profil différent. Ouf !</p>
+                <div class="reponse">
+                    <p class="contenu_1"></p>
+                    <p class="contenu_2"></p>
+                    <p class="contenu_3"></p>    
+                </div>
                 <h2 class="question">Laissez moi vous les présenter :</h2>
                 <div class="personne">
                     <div class="contenu_1"><img class=" typo_person" src="img/roxane.png"><h1>Roxane<br/> 33 ans</h1></div>
@@ -61,11 +70,15 @@
                     <P class="contenu_2">Difficile, pas assez de travail pour satisfaire l’expérience.</P>
                     <P class="contenu_3">Cela n’est pas de mon ressort.</P>
                 </div>
+                <div class="reponse">
+                    <p class="contenu_1"><img class="tourner_page" src="img/tourner_page.png"></p>
+                    <p class="contenu_2"><img class="tourner_page" src="img/tourner_page.png"></p>
+                    <p class="contenu_3"><img class="tourner_page" src="img/tourner_page.png"></p>
+                </div>
             </div>
         </section>
-        <footer class="nav_bas_expo">
+        <footer class="nav_bas">
             <a href="#"><img class="arrow_haut_expo" src="img/arrow_menu.png" alt="fleche bas" height="30px" width="auto"></a>
-            <a href="interview.html"><img class="arrow_expo" src="img/arrow.png" alt="fleche bas" height="30px" width="auto"></a>
         </footer>
     </body>
 </html> 
