--- a/exposition.html
+++ b/exposition.html
@@ -8,10 +8,10 @@
     </head>
     <body class="page_expo">
          <div class="background_slider">
+            <img class="back_img" src="img/fond_2.png">
             <img class="back_img" src="img/fond_0.png">
             <img class="back_img" src="img/fond_2.png">
             <img class="back_img" src="img/fond_1.png">
-            <img class="back_img" src="img/fond_2.png">
             <img class="back_img" src="img/fond_3.png">
             <img class="back_img" src="img/fond_0.png">
             <img class="back_img" src="img/fond_1.png">
@@ -27,7 +27,7 @@
                         <li class="deroulant"><a href="index.html">ACCUEIL</a>
                             <ul class="sous">
                                 <li><a href="menu.html">MENU</a></li>
-                                <li><a href="#">CONTACT</a></li>
+                                <li><a href="contact.html">CONTACT</a></li>
                             </ul>
                         </li>
                         <li><a class="active" href="exposition.html">EXPOSITION</a></li>
