--- a/interview.html
+++ b/interview.html
@@ -13,7 +13,7 @@
                     <li class="deroulant"><a href="index.html">ACCUEIL</a>
                         <ul class="sous">
                             <li><a href="menu.html">MENU</a></li>
-                            <li><a href="#">CONTACT</a></li>
+                            <li><a href="contact.html">CONTACT</a></li>
                         </ul>
                     </li>
                     <li><a class="active" href="interview.html">INTERVIEW</a></li>
@@ -39,6 +39,7 @@
                     <div class="contenu_1"><img class=" typo_person" src="img/roxane.png"><h1>Roxane<br/> 33 ans</h1></div>
                     <div class="contenu_2"><img class=" typo_person" src="img/jean.png"><h1>Jean Luc<br /> 54 ans</h1></div>
                     <div class="contenu_3"><img class=" typo_person" src="img/edouard.png"><h1>Edouard<br /> 26 ans</h1></div>
+                    <!-- Pas trouver artiste de référence -->
                 </div>
                 <div class ="reponse">
                     <p class="contenu_1">Web développeuse dans une agence de Pub “Shake” - Back-end / mise en ligne / serveur. Esprit start-up 10-15 personnes. Toute l'équipe au même niveau et 3 managers.</p>
