--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <a class="retour" href="index.html"><img src="img/retour.png" height="50px" width="auto"></a>
+        <a class="email" href="contact.html"><img src="img/contact.png" height="50px" width="auto"></a>
         <section class="page_menu">
             <a class="lien_menu" href="exposition.html">
                 <img class="img_menu" src="img/exposition.jpg" height="650px" width="auto">
